# gotoo

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
npm/: getBinary.js  install.js  run.js  scripts.js
src/: editor.rs  errors.rs  main.rs  project.rs
